@@ -1,0 +1,3 @@
+<!--
+test parameter that takes an argument of a template name
+-->embedded template: {{{{{content}}}}}
